--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title> Хмммм а зачем это сайт </title>
-        <link rel="stylesheet"href="style.css."/>
+        <link rel="stylesheet"href="style.css"/>
     <body>
         <header>
             <a href="#price">Прайс-лист</a> <a href="#reviews">Отзывы</a> <a href="#photos">Фотографии</a>
